update on main pages

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhi Wang"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Zhi is a data scientist and Ph.D. candidate in healthcare. His research focuses on the current
    opioid epedmic."
   location         : "Bloomington, IN"
