update on main pages

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Zhi Wang"
 title_separator          : "-"
 name                     : &name "Zhi Wang"
-description              : &description "personal description"
+description              : &description "Ph.D. candidate at Indiana University"
 url                      : https://zwang89.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/zwang89"
