--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - - title: "Blog Posts"
+  - title: "Blog Posts: Data Science and Healthcare"
       url: /year-archive/
 
   - title: "Publications"
